[build-system]
requires = [ "setuptools>=41.0.1", "scikit-build>=0.9.0", "numpy", "ninja", "cmake",]

[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-*"
build-frontend = "build"
skip = "pp* *-musllinux_*"
build-verbosity = 1
test-requires = [ "-r requirements/tests.txt",]
test-command = "python {project}/run_tests.py"

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "kitware", "binpy", "gitlab",]
mod_name = "torch_liberator"
repo_name = "torch_liberator"
rel_mod_parent_dpath = "."
os = [ "linux",]
min_python = 3.7
license = "Apache 2"
dev_status = "planning"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "torch_liberator/__main__.py", "*/setup.py",]
